fix: launch endpoint now accepts json instead of form-data (#20)
* fix: launch endpoint now accepts json instead of form-data

* fix: zip method is now on http POST accepting json body
